INFO:
All changes should be appended to this file with each commit.
On publish, it should be cleared to prepare for the next release cycle.

Change logging starts below:
----------
- new tags for slope behavior
- added compat with Conventional Cubes and Templates 2
- fix player height when sliding