@@ -7,3 +7,4 @@ Change logging starts below:
 - new tags for slope behavior
 - added compat with Conventional Cubes and Templates 2
 - fix player height when sliding
+- fix flipping player animation
